--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-  <div class=it
-  <h1>Hello Everyone!</h1>
+  <div class="it">
+  <h1>Welcome to my simple site!</h1>
   <br>
   <br>
   <div class="alert alert-primary" role="alert">
@@ -83,19 +83,20 @@
   <br>
   <h3>About me</h3>
   <br>
-  <br> <img src="img/ans4.jpg" height="200" class="img-fluid " height="300px" alt="">
+  <br> <img src="img/ans4.jpg" height="200px" class="img-fluid " height="300px" alt="" />
   <p class="col-lg-6 cp;-md-10 col-sm-12 ml-2 p-3">I'm currently studying in RBMI College, Bareilly. I have good
     leadership and management skills. I know html, css and bootstrap and I've made this website by suing them. I would
     love to hear your review on this page.
   </p>
-  <div class="icons">
+  <div class="icons ml-5">
     <div class="row ml-3 col-10">
       <i class="fab fa-css3-alt fa-10x text-info"></i>
-      <p>CSS3</p>
+      <h3 class='p-4'>CSS3</h3>
+      <br/><br/>
       <i class="fab fa-html5 fa-10x text-info"></i>
-      <p>HTML5</p>
-      <i class="fas fa-code fa-10x text-info"></i>
-      <p>Developer</p>
+      <h3 class="p-3">HTML5</h3>
+      <i class="fas fa-code fa-8x text-info"></i>
+      <h3>Programming</h3>
 
     </div>
   </div>
